# metaflow-gha

./: .gitignore  LICENSE  README.md  pyproject.toml  show_gha_flow.py
.github/workflows/: ci.yml  e2e.yml  metaflow-gha.yml  publish.yml  worker.yml
metaflow_extensions/gha/plugins/: __init__.py  aws_client.py  gha_cli.py  gha_client.py  gha_decorator.py  s3_queue_client.py  worker.py
tests/: conftest.py  test_gha_cli.py  test_gha_client.py  test_s3_queue.py  test_s3_queue_client.py  test_worker.py
