[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-gha"
version = "0.1.0"
description = "GitHub Actions compute backend for Metaflow"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = [
    "metaflow",
    "boto3>=1.28",
]

[project.optional-dependencies]
coordinator = [
    "metaflow-coordinator>=0.1.5",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metaflow_extensions*"]

[project.entry-points."metaflow.plugins"]
gha = "metaflow_extensions.gha.plugins"
