[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-gha"
version = "0.1.0"
description = "GitHub Actions compute backend for Metaflow"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = [
    "metaflow",
    "boto3>=1.28",
]

[project.optional-dependencies]
coordinator = [
    "metaflow-coordinator>=0.1.5",
]
dev = [
    "pytest",
    "pytest-cov",
    "moto[s3]",
    "ruff",
    "metaflow-coordinator>=0.1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metaflow_extensions*"]

[project.entry-points."metaflow.plugins"]
gha = "metaflow_extensions.gha.plugins"

[tool.pytest.ini_options]
addopts = "--cov=metaflow_extensions --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=60"

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
